# cpp-template

./: CMakeLists.txt  README.md  cleanup.sh  inotify-cmake.sh
src/: .main.cpp.swp  main.cpp
